<resources>

    <string name="app_name">XWorkBench</string>
    <string name="action_settings">Settings</string>

    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="title_3">Title 3</string>
    <string name="title_4">Title 4</string>
    <string name="title_5">Title 5</string>
    <string name="hint_1">1</string>
    <string name="hint_2">2</string>
    <string name="hint_3">3</string>
    <string name="hint_4">4</string>
    <string name="hint_5">5</string>

</resources>
