<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="digitalgarden.xworkbench.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_1" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_2" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ed3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_3" />

        <TextView
            android:id="@+id/tx4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ed4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_4" />

        <TextView
            android:id="@+id/tx5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ed5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_5" />

    </LinearLayout>

</ScrollView>
